--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       </div>
     </nav>
       </div>
+      <!--Interfaz de bienvenida -->
   <section class="text-center">
     <div class="page-banner col-lg bg-img bg-img-parallax overlay-dark cursor-hover dark-mode-container"
       style="background-image: url('./IMG/01.jpg'); width: 100%; height: 500px; background-attachment: fixed;">
@@ -64,6 +65,8 @@
         </div>
       </div>
     </div>
+
+    <!--Traductor-->
     <div class="row text-center " id="google_translate_element"></div>
     <script type="text/javascript">
       function googleTranslateElementInit() {
@@ -78,6 +81,7 @@
       src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
   </section>
+  <!--Acerca de mi-->
   <div class="container-fluid slider-wrapper row col-sm p-5 w-100 bg-transparent">
     <section id="biografia" class="text-center">
       <h1 class="text-center">Acerca de mí</h1>
@@ -102,6 +106,54 @@
         </div>
       </div>
     </section>
+    <section id="contacto" class="text-center">
+      <h1 id="contacto">Contacto</h1>
+      <div class="card border-success mb-3 overlay-dark cursor-hover dark-mode-container dark-mode-card" style="max-width: 18rem;">        <div class="card-header bg-transparent border-success">Puedes contactarme por:</div>
+        <div class="card-body text-success">
+          <p class="card-text">
+            <h2>
+              <a href="mailto:ferandre1718.frg@gmail.com" target="_blank" class="pointer-hover">
+                <i title="Correo" class="display-4 fa fa-google footer__social-image pointer-hover" alt="Gmail"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/fernando-gonz%C3%A1lez-05b297232/" target="_blank">
+                <i title="in Perfil" class="display-4 fa fa-linkedin footer__social-image pointer-hover" alt="Linkedin"></i>
+              </a>
+              <a href="https://wa.me/+50372201248" target="_blank" class="pointer-hover">
+                <i title="WhatsApp" class="display-4 fab fa-whatsapp footer__social-image pointer-hover" alt="WhatsApp"></i>
+              </a>                               
+            </h2>
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <footer role="contentinfo" class="footer cursor-hover text-center">
+      <div class="col-md row cursor-hover">
+        <!-- Cuentas-->
+        <ul class="footer__social-links cursor-hover d-flex justify-content-center list-unstyled">
+          <li class="footer__social-link-item mx-2 ps-0">
+            <a href="https://twitter.com/FherGNZLZ" target="_blank">
+              <i class="fa fa-twitter footer__social-image pointer-hover" title="Twitter" alt="Twitter"></i>
+            </a>
+          </li>
+          <li class="footer__social-link-item mx-2">
+            <a href="https://github.com/Fernando1809" target="_blank">
+              <i class="fa fa-github footer__social-image pointer-hover" title="Github" alt="Github"></i>
+            </a>
+          </li>
+          <li class="footer__social-link-item mx-2">
+            <a href="https://www.instagram.com/__fherxxo__/" target="_blank">
+              <i class="fa fa-instagram footer__social-image pointer-hover" title="Instagram" alt="Instagram"></i>
+            </a>
+          </li>
+          
+        </ul>
+      </div>
+      <p class="cursor-hover mb-0">Power by: Fherxxo</p>
+  </footer>
+  
+  
+    <!--Boton para ir al inicio de la paguina-->
     <div id="btnHome" class="fixed-bottom text-center mb-3" style="display: none;">
       <a class="btn btn-light" href="#" onclick="scrollToTop()">
         <i class="fas fa-home"></i> Ir al inicio
