--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-  <script type="text/javascript"
-    src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script src="https://kit.fontawesome.com/53aedfe9e6.js" crossorigin="anonymous"></script>
-  <link rel="shortcut icon" type="image/png" href="./IMG/BP.png" />
-  <script src="https://open.spotify.com/embed-podcast/iframe-api/v1" async></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="./style.css">
   <title>Fernando Gonzalez</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,42 +16,40 @@
 
 <body id="bodyContainer" class="dark-mode-container">
   <div class="contenedor-flex">
-    <!-- Image and text -->
     <nav class="navbar navbar-expand-sm navbar-custom" id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="./IMG/LogoFG.png" alt="" width="60" height="30" class="d-inline-block align-top" />
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a title="Acerca de mi" class="nav-link" href="#biografia">ACERCA DE MI</a></li>
-            <li class="nav-item"><a title="Proyectos" class="nav-link" href="#proyectos">PROYECTOS</a></li>
-            <li class="nav-item"><a title="Contacto" class="nav-link" href="#contacto">CONTACTO</a></li>
-            <li class="nav-item">
-              <!-- Interruptor de Modo Oscuro -->
-              <div id="darkModeSwitch" class="dark-mode-switch" onclick="toggleDarkMode()">
-                <span id="modeIcon" class="light-mode-icon">&#9728;</span>
-              </div>
-            </li>
-          </ul>
-        </div>
+          <a class="navbar-brand" href="#">
+              <img src="./IMG/LogoFG.png" alt="" width="60" height="30" class="d-inline-block align-top" />
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+              <ul class="navbar-nav">
+                  <li class="nav-item"><a title="Acerca de mi" class="nav-link" href="#biografia">ACERCA DE MI</a></li>
+                  <li class="nav-item"><a title="Proyectos" class="nav-link" href="#proyectos">PROYECTOS</a></li>
+                  <li class="nav-item"><a title="Contacto" class="nav-link" href="#contacto">CONTACTO</a></li>
+                  <li class="nav-item">
+                      <!-- Interruptor de Modo Oscuro -->
+                      <div id="darkModeSwitch" class="dark-mode-switch" onclick="toggleDarkMode()">
+                          <span id="modeIcon" class="light-mode-icon">&#9728;</span>
+                      </div>
+                  </li>
+              </ul>
+          </div>
       </div>
-    </nav>
-      </div>
-      <!--Interfaz de bienvenida -->
+  </nav>
+  
+  </div>
+
   <section class="text-center">
     <div class="page-banner col-lg bg-img bg-img-parallax overlay-dark cursor-hover dark-mode-container"
       style="background-image: url('./IMG/01.jpg'); width: 100%; height: 500px; background-attachment: fixed;">
       <div class="container-fluid h-100 cursor-hover">
         <div class="row justify-content-center align-items-center h-100 cursor-hover">
           <div class="col-lg-8 cursor-hover">
-            <nav aria-label="breadcrumb col-lg">
-
-            </nav>
+            <nav aria-label="breadcrumb col-lg"></nav>
             <div class="row col-md rows cursor-hover">
               <h2 class="colors cursor-hover">Bienvenidos </h2>
               <h5 class="card-title">"Si puedes imaginarlo, puedes programarlo"</h5>
@@ -66,8 +60,8 @@
       </div>
     </div>
 
-    <!--Traductor-->
     <div class="row text-center " id="google_translate_element"></div>
+
     <script type="text/javascript">
       function googleTranslateElementInit() {
         new google.translate.TranslateElement({
@@ -76,14 +70,12 @@
       }
     </script>
 
-
     <script type="text/javascript"
       src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-
   </section>
-  <!--Acerca de mi-->
+
   <div class="container-fluid slider-wrapper row col-sm p-5 w-100 bg-transparent">
-    <section id="biografia" class="text-center">
+    <section id="biografia" class="text-center mt-4 mb-4">
       <h1 class="text-center">Acerca de mí</h1>
       <div class="card">
         <div class="card-body" id="biografia">
@@ -106,9 +98,102 @@
         </div>
       </div>
     </section>
-    <section id="contacto" class="text-center">
+
+    <section id="proyectos" class="text-center mt-4 mb-4">
+      <h1 id="proyectos">Proyectos</h1>
+
+      <div class="container-fluid">
+        <div class="row">
+
+          <div class="col-md-4">
+            <div class="card">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">BubblePets</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                  content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card">
+              <img src="./IMG/DriveEduca.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">DriveEduca</h5>
+                <p class="card-text">
+                  DriveEduca se dedica a promover buenas prácticas en educación vial a través de su sitio web. Incluye foros, chat, un menú interactivo, plataformas de contacto, y un buscador para acceder a información específica. Ofrece una prueba educativa y un juego interactivo para concientizar sobre los riesgos de la mala educación vial, promoviendo así una cultura vial más segura.</p>
+                  <hr>
+                  <p class="card-text">Rol desempeñado: Programador Front End</p>
+                <a href="https://github.com/Fernando1809/DriveEduca" class="btn btn-primary">Ver Repositorio</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">PathToy</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                  content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+<!-- Entornos de desarrollo -->
+<section class="client mt-4 mb-4" id="clients">
+  <div class="container text-center">
+      <h2>Entornos de desarrollo</h2>
+      <div class="row justify-content-center">
+          <div class="col-md-2">
+              <i class="fa fa-js fa-3x"></i>
+              <p>JavaScript</p>
+          </div>
+          <div class="col-md-2">
+              <i class="fa fa-css3 fa-3x"></i>
+              <p>CSS</p>
+          </div>
+          <div class="col-md-2">
+              <i class="fa fa-html5 fa-3x"></i>
+              <p>HTML</p>
+          </div>
+          <div class="col-md-2">
+              <i class="fa fa-python fa-3x"></i>
+              <p>Python</p>
+          </div>
+          <div class="col-md-2">
+              <i class="fa fa-php fa-3x"></i>
+              <p>PHP</p>
+          </div>
+      </div>
+  </div>
+</section>
+
+<!--CV-->
+  <section class="contact cursor-hover mt-4 mb-4" id="curriv">
+      <div class="jumbotron-fluid col-md row align-items-center justify-content-center cursor-hover">
+        <div class="col-md text-center">
+          <h2 class="cursor-hover card-title">Curriculum Vitae</h2>
+        </div>
+        <div class="col-md text-center">
+          <div class="display-4 contact__info div">
+            <a class="" href="download/Curriculum Vitae Isa.pdf" target="_blank">
+              <i title="CV Descargar" class="fa fa-download footer__social-image" alt="CV"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="contacto" class="text-center mt-4 mb-4">
       <h1 id="contacto">Contacto</h1>
-      <div class="card border-success mb-3 overlay-dark cursor-hover dark-mode-container dark-mode-card" style="max-width: 18rem;">        <div class="card-header bg-transparent border-success">Puedes contactarme por:</div>
+      <div class="card-body" style="max-width: 18rem;">
+        <div class="card-title">Puedes contactarme por:</div>
         <div class="card-body text-success">
           <p class="card-text">
             <h2>
@@ -120,16 +205,17 @@
               </a>
               <a href="https://wa.me/+50372201248" target="_blank" class="pointer-hover">
                 <i title="WhatsApp" class="display-4 fab fa-whatsapp footer__social-image pointer-hover" alt="WhatsApp"></i>
-              </a>                               
+              </a>
             </h2>
           </p>
         </div>
       </div>
     </section>
 
-    <footer role="contentinfo" class="footer cursor-hover text-center">
+    <footer role="contentinfo" class="footer cursor-hover text-center mt-4 mb-4">
       <div class="col-md row cursor-hover">
-        <!-- Cuentas-->
+        <p class="cursor-hover mb-0">SIGUEME EN MIS REDES SOCIALES:</p>
+
         <ul class="footer__social-links cursor-hover d-flex justify-content-center list-unstyled">
           <li class="footer__social-link-item mx-2 ps-0">
             <a href="https://twitter.com/FherGNZLZ" target="_blank">
@@ -146,14 +232,10 @@
               <i class="fa fa-instagram footer__social-image pointer-hover" title="Instagram" alt="Instagram"></i>
             </a>
           </li>
-          
         </ul>
       </div>
-      <p class="cursor-hover mb-0">Power by: Fherxxo</p>
-  </footer>
-  
-  
-    <!--Boton para ir al inicio de la paguina-->
+    </footer>
+
     <div id="btnHome" class="fixed-bottom text-center mb-3" style="display: none;">
       <a class="btn btn-light" href="#" onclick="scrollToTop()">
         <i class="fas fa-home"></i> Ir al inicio
@@ -161,11 +243,11 @@
     </div>
   </div>
 
-  <!-- Incluye Bootstrap JS después del contenido del cuerpo -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-rbs5B9xVn4N3E8NFSva5rAkHA3uHcfc0SAkN86wv31N5f5DqNvxFQ2aW1npa+JHL"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./index.js"></script>
+  <script src="https://use.fontawesome.com/82eb904f04.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://momentjs.com/downloads/moment.js"></script>
 </body>
 
 </html>
