--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
             <div class="col-sm-8">
               <p class="text-center">
-                Hola, soy Fernando González. Actualmente tengo <span class="EdadFG"></span>, me encuentro inmerso en la
+                Hola, soy Fernando González. Actualmente tengo <span class="EdadFG"></span> años, me encuentro inmerso en la
                 experiencia universitaria, cursando la carrera de Ingeniería en Sistemas y Redes Informáticas en la
                 prestigiosa Universidad Gerardo Barrios. Mi fascinación por la tecnología se refleja especialmente en el
                 ámbito de las redes y la electrónica, además de mi hobby en la programación FrontEnd.
@@ -119,7 +119,7 @@
                 <hr>
                 <p class="card-text">Rol desempeñado: Diseñador </p>
                 <a href="https://github.com/wilsongutierrez-01/Bubble_Pet_xForce.git" class="btn btn-primary"> Ver
-                  Repocitorio</a>
+                  Repositorio</a>
               </div>
             </div>
           </div>
@@ -143,13 +143,14 @@
 
           <div class="col-md-4">
             <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="./Archivos/PathToy.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">PathToy</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's
-                  content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">PathToy es una plataforma web diseñada para facilitar el intercambio de juguetes entre usuarios. Los usuarios pueden registrarse, publicar sus juguetes disponibles para intercambiar, buscar y navegar a través de una amplia variedad de opciones, establecer comunicación con otros usuarios interesados y finalizar intercambios de manera segura. PathToy promueve la reutilización y el intercambio de juguetes, fomentando una comunidad colaborativa y sostenible.
+                </p>
+                <hr>
+                <p class="card-text">Rol desempeñado: Programador Front End</p>
+                <a href="https://github.com/MigueloRuiz14/PathToy.git" class="btn btn-primary">Ver Repositorio</a>
               </div>
             </div>
           </div>
@@ -221,9 +222,9 @@
       </div>
       <div class="card-body text-center">
         <div class="social-networks">
-          <a href="https://www.facebook.com/Fher.GNZLZ/" class="facebook"><i class="fa fa-facebook"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=61556443884219&mibextid=ZbWKwL" class="facebook"><i class="fa fa-facebook"></i></a>
           <a href="https://github.com/Fernando1809" class="github"><i class="fab fa-github"></i></a>
-          <a href="https://twitter.com/FherGNZLZ" class="twitter"><i class="fab fa-twitter"></i></a>
+          <a href="https://x.com/FHERXXXXO?t=zdsuiUWud4Nn0FmfmXvs1A&s=09" class="twitter"><i class="fab fa-twitter"></i></a>
           <a href="https://www.instagram.com/__fherxxo__/" class="instagram"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
