--- a/index.html
+++ b/index.html
@@ -7,39 +7,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="./style.css">
   <title>Fernando Gonzalez</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body id="bodyContainer" class="dark-mode-container">
   <div class="contenedor-flex">
     <nav class="navbar navbar-expand-sm navbar-custom" id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="./Archivos/LogoFG.png" alt="" width="60" height="30" class="d-inline-block align-top" />
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a title="Acerca de mi" class="nav-link" href="#biografia">ACERCA DE MI</a></li>
-            <li class="nav-item"><a title="Proyectos" class="nav-link" href="#proyectos">PROYECTOS</a></li>
-            <li class="nav-item"><a title="Contacto" class="nav-link" href="#contacto">CONTACTO</a></li>
-            <li class="nav-item">
-              <!-- Interruptor de Modo Oscuro -->
-              <div id="darkModeSwitch" class="dark-mode-switch" onclick="toggleDarkMode()">
-                <span id="modeIcon" class="light-mode-icon">&#9728;</span>
-              </div>
-            </li>
-          </ul>
+            <ul class="navbar-nav mb-2 mb-lg-0 text-center">
+                <li class="nav-item"><a title="Acerca de mi" class="nav-link" href="#biografia">ACERCA DE MI</a></li>
+                <li class="nav-item"><a title="Proyectos" class="nav-link" href="#proyectos">PROYECTOS</a></li>
+                <li class="nav-item"><a title="Contacto" class="nav-link" href="#contacto">CONTACTO</a></li>
+            </ul>
+            <div class="d-flex">
+                <div id="google_translate_element"></div>
+                <div id="darkModeSwitch" class="dark-mode-switch" onclick="toggleDarkMode()">
+                    <span id="modeIcon" class="light-mode-icon">&#9728;</span>
+                </div>
+            </div>
         </div>
       </div>
     </nav>
-
   </div>
+</body>
+
+
+
 
   <section class="text-center">
     <div class="page-banner col-lg bg-img bg-img-parallax overlay-dark cursor-hover dark-mode-container"
@@ -59,8 +59,6 @@
       </div>
     </div>
 
-    <div class="row text-center " id="google_translate_element"></div>
-
     <script type="text/javascript">
       function googleTranslateElementInit() {
         new google.translate.TranslateElement({
@@ -72,7 +70,6 @@
     <script type="text/javascript"
       src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   </section>
-
   <div class="container-fluid slider-wrapper row col-sm p-5 w-100 bg-transparent">
     <section id="biografia" class="text-center mt-4 mb-4">
       <h1 class="text-center">Acerca de mí</h1>
@@ -94,11 +91,19 @@
                 conocimientos teóricos adquiridos en situaciones prácticas, con el objetivo de expandir mi habilidad
                 para resolver problemas y contribuir al mundo tecnológico en constante evolución.
               </p>
+              <!-- Botón con icono de descarga -->
+              <div class="text-center">
+                <a class="btn btn-outline-light" href="/Archivos/CV.pdf">
+                  <i class="fas fa-download"></i> Descargar Curriculum
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+  </div>
+    
 
     <section id="proyectos" class="text-center mt-4 mb-4">
       <h1 id="proyectos">Proyectos</h1>
@@ -118,7 +123,7 @@
                   conectar a amantes de los animales.</p>
                 <hr>
                 <p class="card-text">Rol desempeñado: Diseñador </p>
-                <a href="https://github.com/wilsongutierrez-01/Bubble_Pet_xForce.git" class="btn btn-primary"> Ver
+                <a href="https://github.com/wilsongutierrez-01/Bubble_Pet_xForce.git" class="btn btn-outline-info"> Ver
                   Repositorio</a>
               </div>
             </div>
@@ -136,7 +141,7 @@
                   la mala educación vial, promoviendo así una cultura vial más segura.</p>
                 <hr>
                 <p class="card-text">Rol desempeñado: Programador Front End</p>
-                <a href="https://github.com/Fernando1809/DriveEduca" class="btn btn-primary">Ver Repositorio</a>
+                <a href="https://github.com/Fernando1809/DriveEduca" class="btn btn-outline-info">Ver Repositorio</a>
               </div>
             </div>
           </div>
@@ -150,7 +155,7 @@
                 </p>
                 <hr>
                 <p class="card-text">Rol desempeñado: Programador Front End</p>
-                <a href="https://github.com/MigueloRuiz14/PathToy.git" class="btn btn-primary">Ver Repositorio</a>
+                <a href="https://github.com/MigueloRuiz14/PathToy.git" class="btn btn-outline-info">Ver Repositorio</a>
               </div>
             </div>
           </div>
@@ -184,57 +189,22 @@
           </div>
         </div>
       </div>
-    </section>
-
-    <!--CV-->
-    <section class="contact cursor-hover mt-4 mb-4" id="curriv">
-      <div class="jumbotron-fluid col-md row align-items-center justify-content-center cursor-hover">
-        <div class="col-md text-center">
-          <h2 class="cursor-hover card-title">Curriculum Vitae</h2>
-        </div>
-        <div class="col-md text-center">
-          <div class="display-4 contact__info div">
-            <a class="" href="./Archivos/CV.docx" target="_blank">
-              <i title="CV Descargar" class="fa fa-download footer__social-image" alt="CV"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="contacto" class="text-center mt-4 mb-4">
-
-      <div class="card-title text-center">
-        <h1>Puedes contactarme por:</h1>
-      </div>
-      <div class="card-body">
-
-        <div class="social-networks">
-          <a href="mailto:ferandre1718.frg@gmail.com" class="google"><i class="fab fa-google"></i></a>
-          <a href="https://www.linkedin.com/in/fernando-gonz%C3%A1lez-05b297232/" class="linkedin"><i
-              class="fab fa-linkedin"></i></a>
-          <a href="https://wa.me/+50372201248" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
-
-    </section>
-    <div class="card">
-      <div class="card-title text-center">
-        SIGUEME EN MIS REDES SOCIALES:
-      </div>
-      <div class="card-body text-center">
-        <div class="social-networks">
-          <a href="https://www.facebook.com/profile.php?id=61556443884219&mibextid=ZbWKwL" class="facebook"><i class="fa fa-facebook"></i></a>
-          <a href="https://github.com/Fernando1809" class="github"><i class="fab fa-github"></i></a>
-          <a href="https://x.com/FHERXXXXO?t=zdsuiUWud4Nn0FmfmXvs1A&s=09" class="twitter"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.instagram.com/__fherxxo__/" class="instagram"><i class="fab fa-instagram"></i></a>
-        </div>
-      </div>
-
-      <div id="btnHome" class="fixed-bottom text-center mb-3">
-        <a class="btn btn-light" href="#" onclick="scrollToTop()">
-           <i class="fas fa-home"></i> Ir al inicio
-        </a>
-     </div>
-
+    </section> 
+        <footer id="contacto" class="social-media" style="text-align: center;">
+          <h1>Puedes contactarme por:</h1>
+      <a href="https://www.facebook.com/profile.php?id=61556443884219&mibextid=ZbWKwL"><i class='bx bxl-facebook'></i></a>
+      <a href="https://www.instagram.com/__fherxxo__/"><i class='bx bxl-instagram' ></i></a>
+      <a href="https://x.com/FHERXXXXO?t=zdsuiUWud4Nn0FmfmXvs1A&s=09" ><i class='bx bxl-twitter'></i></a>
+      <a href="https://wa.me/+50372201248"><i class='bx bxl-whatsapp' ></i></a>
+      <a href="https://www.linkedin.com/in/fernando-gonz%C3%A1lez-05b297232/"><i class='bx bxl-linkedin' ></i></a>
+      <a href="mailto:ferandre1718.frg@gmail.com"><i class='bx bxl-gmail'></i></a>
+      <a href="https://github.com/Fernando1809"><i class='bx bxl-github'></i></a>
+    </footer>
+    <div id="btnHome" class="fixed-bottom text-center mb-3">
+      <a class="btn btn-light" href="#" onclick="scrollToTop()">
+        <i class="fas fa-home fa-2x"></i>
+      </a>
+    </div>
       <div class="copyright text-center mt-3">
         <p>
           © <span id="currentYear"></span> Todos los derechos reservados.
@@ -243,7 +213,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://use.fontawesome.com/82eb904f04.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="https://momentjs.com/downloads/moment.js"></script>
     <script src="./index.js"></script>
 </body>
