--- a/index.html
+++ b/index.html
@@ -92,11 +92,7 @@
                 para resolver problemas y contribuir al mundo tecnológico en constante evolución.
               </p>
               <!-- Botón con icono de descarga -->
-              <div class="text-center">
-                <a class="btn btn-outline-light" href="/Archivos/CV.pdf">
-                  <i class="fas fa-download"></i> Descargar Curriculum
-                </a>
-              </div>
+              <button id="downloadButton" class="btn btn-outline-ligh fas fa-download">Descargar CV</button>
             </div>
           </div>
         </div>
