--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 para resolver problemas y contribuir al mundo tecnológico en constante evolución.
               </p>
               <!-- Botón con icono de descarga -->
-              <button id="downloadButton" class="btn btn-outline-ligh fas fa-download">Descargar CV</button>
+              <button id="downloadButton" class="btn btn-outline-light fas fa-download">Descargar CV</button>
             </div>
           </div>
         </div>
