--- a/index.html
+++ b/index.html
@@ -86,11 +86,7 @@
                 prestigiosa Universidad Gerardo Barrios. Mi fascinación por la tecnología se refleja especialmente en el
                 ámbito de las redes y la electrónica, además de mi hobby en la programación FrontEnd.
                 <br>
-                Explorar y comprender los intrincados entresijos de estos campos me proporciona una visión más profunda
-                y enriquecedora de mi formación académica. Constantemente busco oportunidades para aplicar los
-                conocimientos teóricos adquiridos en situaciones prácticas, con el objetivo de expandir mi habilidad
-                para resolver problemas y contribuir al mundo tecnológico en constante evolución.
-              </p>
+                "Entender bien estos temas me ayuda mucho en mis estudios. Siempre trato de usar lo que aprendo en la práctica para mejorar mis habilidades y ayudar en el avance de la tecnología.              </p>
               <!-- Botón con icono de descarga -->
               <button id="downloadButton" class="btn btn-outline-light fas fa-download">Descargar CV</button>
             </div>
