--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 prestigiosa Universidad Gerardo Barrios. Mi fascinación por la tecnología se refleja especialmente en el
                 ámbito de las redes y la electrónica, además de mi hobby en la programación FrontEnd.
                 <br>
-                "Entender bien estos temas me ayuda mucho en mis estudios. Siempre trato de usar lo que aprendo en la práctica para mejorar mis habilidades y ayudar en el avance de la tecnología.              </p>
+                Entender bien estos temas me ayuda mucho en mis estudios. Siempre trato de usar lo que aprendo en la práctica para mejorar mis habilidades y ayudar en el avance de la tecnología.              </p>
               <!-- Botón con icono de descarga -->
               <button id="downloadButton" class="btn btn-outline-light fas fa-download">Descargar CV</button>
             </div>
