--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li class="nav-item"><a title="Acerca de mi" class="nav-link" href="#biografia">ACERCA DE MI</a></li>
                 <li class="nav-item"><a title="Proyectos" class="nav-link" href="#proyectos">PROYECTOS</a></li>
                 <li class="nav-item"><a title="Contacto" class="nav-link" href="#contacto">CONTACTO</a></li>
+                <li class="nav-item"><a title="Diseños" class="nav-link" href="#carouselExampleIndicators">DISEÑOS</a></li>
             </ul>
             <div class="d-flex">
                 <div id="google_translate_element"></div>
@@ -187,6 +188,33 @@
         </div>
       </div>
     </section> 
+
+    <section>
+      <h1 class="text-center">Diseños</h1>
+      <div id="carouselExampleIndicators" class="carousel slide" style="max-width: 500px; margin: 0 auto;">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/Archivos/OIG3.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/Archivos/OIG2.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
+    
         <footer id="contacto" class="social-media" style="text-align: center;">
           <h1>Puedes contactarme por:</h1>
       <a href="https://www.facebook.com/profile.php?id=61556443884219&mibextid=ZbWKwL"><i class='bx bxl-facebook'></i></a>
