--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="./style.css">
-  <link rel="icon" href="./Archivos/OIG2.jpg">
+  <link rel="icon" href="./Archivos/Diseño sin título.png">
   <title>Fernando Gonzalez</title>
 </head>
 
 <body id="bodyContainer" class="dark-mode-container">
   <div class="contenedor-flex">
-    <nav class="navbar navbar-expand-sm navbar-custom" id="navbar">
+    <nav class="navbar navbar-expand-sm navbar-custom navbar-dark" id="navbar">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 text-center">
-              <a class="navbar-brand" href="#"><img src="/Archivos/OIG2.jpg" alt="Logo"></a>
+              <a class="navbar-brand" href="#"><img src="/Archivos/Diseño sin título.png" alt="Logo"></a>
                 <li class="nav-item"><a title="Acerca de mi" class="nav-link" href="#biografia">ACERCA DE MI</a></li>
                 <li class="nav-item"><a title="Proyectos" class="nav-link" href="#proyectos">PROYECTOS</a></li>
                 <li class="nav-item"><a title="Contacto" class="nav-link" href="#contacto">CONTACTO</a></li>
