--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 text-center">
-              <a class="navbar-brand" href="#"><img src="/Archivos/Diseño sin título.png" alt="Logo"></a>
+              <a class="navbar-brand" href="#"><img src="/Archivos/Logo.png" alt="Logo"></a>
                 <li class="nav-item"><a title="Acerca de mi" class="nav-link" href="#biografia">ACERCA DE MI</a></li>
                 <li class="nav-item"><a title="Proyectos" class="nav-link" href="#proyectos">PROYECTOS</a></li>
                 <li class="nav-item"><a title="Contacto" class="nav-link" href="#contacto">CONTACTO</a></li>
@@ -200,6 +200,7 @@
       </div>
     </div>
   </section>
+  
   <footer id="contacto" class="social-media" style="text-align: center;">
     <h1>Puedes contactarme por:</h1>
     <a href="https://www.facebook.com/profile.php?id=61556443884219&mibextid=ZbWKwL" style="color: #0821ff;"><i class='bx bxl-facebook' ></i></a>
