--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 text-center">
-              <a class="navbar-brand" href="#"><img src="/Archivos/Logo.png" alt="Logo"></a>
-                <li class="nav-item"><a title="Acerca de mi" class="nav-link" href="#biografia">ACERCA DE MI</a></li>
+              <a class="navbar-brand" href="#"><img src="Archivos/Logo.png" alt="Logo"></a>
+              <li class="nav-item"><a title="Acerca de mi" class="nav-link" href="#biografia">ACERCA DE MI</a></li>
                 <li class="nav-item"><a title="Proyectos" class="nav-link" href="#proyectos">PROYECTOS</a></li>
                 <li class="nav-item"><a title="Contacto" class="nav-link" href="#contacto">CONTACTO</a></li>
             </ul>
