--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body id="bodyContainer" class="dark-mode-container">
   <div class="contenedor-flex">
-    <nav class="navbar navbar-expand-sm navbar-custom navbar-dark" id="navbar">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-sm navbar-custom" id="navbar">
+       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
