--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="./style.css">
-  <link rel="icon" href="./Archivos/Diseño sin título.png">
+  <!--<link rel="icon" href="./Archivos/Diseño sin título.png">-->
   <title>Fernando Gonzalez</title>
 </head>
 
@@ -23,13 +23,13 @@
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 text-center">
-              <a class="navbar-brand" href="#"><img src="Archivos/Logo.png" alt="Logo"></a>
+              <!--<a class="navbar-brand" href="#"><img src="Archivos/Logo.png" alt="Logo"></a>-->
               <li class="nav-item"><a title="Acerca de mi" class="nav-link" href="#biografia">ACERCA DE MI</a></li>
                 <li class="nav-item"><a title="Proyectos" class="nav-link" href="#proyectos">PROYECTOS</a></li>
                 <li class="nav-item"><a title="Contacto" class="nav-link" href="#contacto">CONTACTO</a></li>
             </ul>
-            <div id="google_translate_element"></div>
-            <div class="d-flex ms-auto"> <!-- Alineación a la derecha -->
+           <!-- <div id="google_translate_element"></div>-->
+            <div class="d-flex ms-auto"> 
               <div id="darkModeSwitch" class="dark-mode-switch" onclick="toggleDarkMode()">
                   <span id="modeIcon" class="light-mode-icon">&#9728;</span>
 
@@ -49,25 +49,25 @@
             <div class="row col-md rows cursor-hover welcome-message">
               <img src="./Archivos/BT21.png" id="BT"
                 style="width: 50%; max-width: 300px; display: block; margin: 0 auto;">
-              <h2 class="colors cursor-hover">Bienvenidos </h2>
-              <h5 class="card-title">"Si puedes imaginarlo, puedes programarlo"</h5>
-              <p class="card-text">-Alejandro Taboada-</p>
+              <h2 class="colors cursor-hover">Bienvenidos a mi portafolio</h2>
+              <!--<h5 class="card-title">"Si puedes imaginarlo, puedes programarlo"</h5>
+              <p class="card-text">-Alejandro Taboada-</p>-->
             </div>
           </div>
         </div>
       </div>
     </div>
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
       function googleTranslateElementInit() {
         new google.translate.TranslateElement({
           pageLanguage: 'es',
-          includedLanguages: 'en,es,pt,ko,ja', // Idiomas que deseas incluir
+          includedLanguages: 'en,es,pt,ko,ja', 
         }, 'google_translate_element');
       }
     </script>
 
     <script type="text/javascript"
-      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>-->
   </section>
 
   <section id="biografia" class="text-center mt-4 mb-4 ">
@@ -85,7 +85,7 @@
                 en
                 la
                 experiencia universitaria, cursando la carrera de Ingeniería en Sistemas y Redes Informáticas en la
-                prestigiosa Universidad Gerardo Barrios. Mi fascinación por la tecnología se refleja especialmente en el
+                Universidad Gerardo Barrios. Mi fascinación por la tecnología se refleja especialmente en el
                 ámbito de las redes y la electrónica, además de mi hobby en la programación FrontEnd.
                 <br>
                 Entender bien estos temas me ayuda mucho en mis estudios. Siempre trato de usar lo que aprendo en la
@@ -94,8 +94,6 @@
                 Me gusta la cultura coreana entre lo más destacado el k-pop y los k-dramas, también me gustan los
                 videojuegos. Me gusta apoyar a los demás, escucharlos y apoyarlos en lo que pueda.
               </p>
-
-              <!-- Botón con icono de descarga -->
               <button id="downloadButton" class="btn btn-outline-light fas fa-download">Descargar CV</button>
             </div>
           </div>
@@ -104,15 +102,10 @@
     </div>
   </section>
 
-
-
-
   <section id="proyectos" class="text-center my-5">
     <h1 id="proyectos">Proyectos</h1>
-
     <div class="container">
       <div class="row">
-
         <div class="col-12 col-lg-4 my-3">
           <div class="card">
             <img src="./Archivos/Bubblepets.jpg" class="card-img-top" alt="...">
@@ -127,7 +120,6 @@
               <p class="card-text">Rol desempeñado: Diseñador </p>
               <a href="https://github.com/wilsongutierrez-01/Bubble_Pet_xForce.git" class="btn btn-outline-info"> Ver
                 Repositorio</a>
-
             </div>
           </div>
         </div>
@@ -172,7 +164,7 @@
       </div>
     </div>
   </section>
-  <!-- Entornos de desarrollo -->
+  <!-- Entornos de desarrollo 
   <section class="clients my-5" id="clients">
     <div class="container text-center">
       <h2 class="my-4">Entornos de desarrollo</h2>
@@ -199,17 +191,17 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
   
   <footer id="contacto" class="social-media" style="text-align: center;">
     <h1>Puedes contactarme por:</h1>
-    <a href="https://www.facebook.com/profile.php?id=61556443884219&mibextid=ZbWKwL" style="color: #0821ff;"><i class='bx bxl-facebook' ></i></a>
+    <!--<a href="https://www.facebook.com/profile.php?id=61556443884219&mibextid=ZbWKwL" style="color: #0821ff;"><i class='bx bxl-facebook' ></i></a>
     <a href="https://www.instagram.com/_fherxxo_/" style="color: #ff0062;"><i class='bx bxl-instagram'></i></a>
-    <a href="https://x.com/FHERXXXXO?t=zdsuiUWud4Nn0FmfmXvs1A&s=09" style="color: #00b7ff;"><i class='bx bxl-twitter'></i></a>
+    <a href="https://x.com/FHERXXXXO?t=zdsuiUWud4Nn0FmfmXvs1A&s=09" style="color: #00b7ff;"><i class='bx bxl-twitter'></i></a>-->
     <a href="https://wa.me/+50372201248" style="color: #099405;"><i class='bx bxl-whatsapp'></i></a>
     <a href="https://www.linkedin.com/in/fernando-gonz%C3%A1lez-05b297232/" style="color: #0004ee;"><i class='bx bxl-linkedin'></i></a>
     <a href="mailto:ferandre1718.frg@gmail.com" style="color: #ff00008a;"><i class='bx bxl-gmail' ></i></a>
-    <a href="https://github.com/Fernando1809" style="color: #000000;"><i class='bx bxl-github'></i></a>
+    <!--<a href="https://github.com/Fernando1809" style="color: #000000;"><i class='bx bxl-github'></i></a>-->
   </footer>
   <div id="btnHome" class="fixed-bottom text-end mb-3 me-3">
     <a class="btn btn-light" href="#" onclick="scrollToTop()">
