--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="navbar-nav mb-2 mb-lg-0 text-center">
               <!--<a class="navbar-brand" href="#"><img src="Archivos/Logo.png" alt="Logo"></a>-->
               <li class="nav-item"><a title="Acerca de mi" class="nav-link" href="#biografia">ACERCA DE MI</a></li>
-                <li class="nav-item"><a title="Proyectos" class="nav-link" href="#proyectos">PROYECTOS</a></li>
+               <!-- <li class="nav-item"><a title="Proyectos" class="nav-link" href="#proyectos">PROYECTOS</a></li>-->
                 <li class="nav-item"><a title="Contacto" class="nav-link" href="#contacto">CONTACTO</a></li>
             </ul>
            <!-- <div id="google_translate_element"></div>-->
@@ -102,7 +102,7 @@
     </div>
   </section>
 
-  <section id="proyectos" class="text-center my-5">
+  <!--<section id="proyectos" class="text-center my-5">
     <h1 id="proyectos">Proyectos</h1>
     <div class="container">
       <div class="row">
@@ -163,7 +163,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
   <!-- Entornos de desarrollo 
   <section class="clients my-5" id="clients">
     <div class="container text-center">
