--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <li class="nav-item"><a title="Contacto" class="nav-link" href="#contacto">CONTACTO</a></li>
             </ul>
            <!-- <div id="google_translate_element"></div>-->
-            <div class="d-flex ms-auto"> 
+            <!--<div class="d-flex ms-auto"> 
               <div id="darkModeSwitch" class="dark-mode-switch" onclick="toggleDarkMode()">
-                  <span id="modeIcon" class="light-mode-icon">&#9728;</span>
+                  <span id="modeIcon" class="light-mode-icon">&#9728;</span>-->
 
             </div>
         </div>
@@ -90,10 +90,10 @@
                 <br>
                 Entender bien estos temas me ayuda mucho en mis estudios. Siempre trato de usar lo que aprendo en la
                 práctica para mejorar mis habilidades y ayudar en el avance de la tecnología.
-                <br>
+                <!--<br>
                 Me gusta la cultura coreana entre lo más destacado el k-pop y los k-dramas, también me gustan los
                 videojuegos. Me gusta apoyar a los demás, escucharlos y apoyarlos en lo que pueda.
-              </p>
+              </p>--> 
               <button id="downloadButton" class="btn btn-outline-light fas fa-download">Descargar CV</button>
             </div>
           </div>
@@ -198,9 +198,9 @@
     <!--<a href="https://www.facebook.com/profile.php?id=61556443884219&mibextid=ZbWKwL" style="color: #0821ff;"><i class='bx bxl-facebook' ></i></a>
     <a href="https://www.instagram.com/_fherxxo_/" style="color: #ff0062;"><i class='bx bxl-instagram'></i></a>
     <a href="https://x.com/FHERXXXXO?t=zdsuiUWud4Nn0FmfmXvs1A&s=09" style="color: #00b7ff;"><i class='bx bxl-twitter'></i></a>-->
-    <a href="https://wa.me/+50372201248" style="color: #099405;"><i class='bx bxl-whatsapp'></i></a>
+    <!--<a href="https://wa.me/+50372201248" style="color: #099405;"><i class='bx bxl-whatsapp'></i></a>-->
     <a href="https://www.linkedin.com/in/fernando-gonz%C3%A1lez-05b297232/" style="color: #0004ee;"><i class='bx bxl-linkedin'></i></a>
-    <a href="mailto:ferandre1718.frg@gmail.com" style="color: #ff00008a;"><i class='bx bxl-gmail' ></i></a>
+    <!--<a href="mailto:ferandre1718.frg@gmail.com" style="color: #ff00008a;"><i class='bx bxl-gmail' ></i></a>-->
     <!--<a href="https://github.com/Fernando1809" style="color: #000000;"><i class='bx bxl-github'></i></a>-->
   </footer>
   <div id="btnHome" class="fixed-bottom text-end mb-3 me-3">
