--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <div class="container-fluid slider-wrapper row col-sm p-5 w-100 bg-transparent">
       <div class="page-banner col-lg bg-img bg-img-parallax overlay-dark"
-      style="background-image: url(/Archivos/01.jpg); width: 100%; min-height: 500px; background-attachment: fixed; background-size: cover;">
+      style="background-image: url(./Archivos/01.jpg); width: 100%; min-height: 500px; background-attachment: fixed; background-size: cover;">
       <div class="container-fluid h-100">
         <div class="row justify-content-center align-items-center h-100">
           <div class="col-lg-8">
