--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="/style.css" />
   <title>Mi portafolio | FG</title>
 </head>
-<body>
+<body style="background-color: black;">
         <div class="contenedor-flex">
           <nav class="navbar navbar-expand-sm navbar-custom" id="navbar">
             <div class="container-fluid">
@@ -238,7 +238,7 @@
       <a target="_blank" href="https://www.instagram.com/_fherxxo_/" style="color: #ff0062;"><i class='bx bxl-instagram'></i></a>
       <a  target="_blank"href="https://x.com/FHERXXXXO?t=zdsuiUWud4Nn0FmfmXvs1A&s=09" style="color: #00b7ff;"><i class='bx bxl-twitter'></i></a>-->
       <!--<a target="_blank" href="https://wa.me/+50372201248" style="color: #099405;"><i class='bx bxl-whatsapp'></i></a>-->
-      <a target="_blank" href="https://www.linkedin.com/in/fernando-gonz%C3%A1lez-05b297232/" style="color: #0004ee;"><i class='bx bxl-linkedin'></i></a>
+      <a target="_blank" href="https://www.linkedin.com/in/fernando-gonz%C3%A1lez-05b297232/"><i class='bx bxl-linkedin'></i></a>
       <!--<a target="_blank" href="mailto:ferandre1718.frg@gmail.com" style="color: #ff00008a;"><i class='bx bxl-gmail' ></i></a>-->
       <!--<a target="_blank" href="https://github.com/Fernando1809" style="color: #000000;"><i class='bx bxl-github'></i></a>-->
     </footer>
