--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="/style.css" />
   <title>Mi portafolio | FG</title>
 </head>
-<body style="background-color: black;">
+<body style="background-color: black;" class="text-white">
         <div class="contenedor-flex">
           <nav class="navbar navbar-expand-sm navbar-custom" id="navbar">
             <div class="container-fluid">
@@ -189,7 +189,7 @@
           <div class="about__photo-container">
             <div class="row justify-content-center align-items-center">
 
-              <img class="glowing-circle about__photo d-none d-md-block " src="/Archivos/FG1.png" alt=""
+              <img class="glowing-circle about__photo d-none d-md-block " src="./Archivos/FG1.png" alt=""
                 title="Fher" />
             </div>
           </div>
