--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="./style.css" />
   <title>Mi portafolio | FG</title>
 </head>
 <body style="background-color: black;" class="text-white">
@@ -265,7 +265,7 @@
   <script src="https://use.fontawesome.com/82eb904f04.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://momentjs.com/downloads/moment.js"></script>
-  <script src="/index.js" defer></script>
+  <script src="./index.js" defer></script>
 </body>
 
 </html>
