--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <div class="about__photo-container">
             <div class="row justify-content-center align-items-center">
 
-              <img class="glowing-circle about__photo d-none d-md-block " src="./Archivos/FG1.png" alt=""
+              <img class="d-none d-md-block " src="./Archivos/FG2.jpg" alt=""
                 title="Fher" />
             </div>
           </div>
@@ -197,7 +197,7 @@
       </div>
       </div>
     </section>
-     <!-- Entornos de desarrollo -->
+     <!-- Entornos de desarrollo 
      <section class="clients my-5" id="clients">
       <div class="container text-center">
         <h2 class="my-4">Entornos de desarrollo</h2>
@@ -224,7 +224,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>--> 
 
 
 
@@ -233,12 +233,12 @@
     <a href="#top" class="back-to-top btn-lg " title="Subir" id="btn-back-to-top"> </a>
 
     <footer id="contacto" class="social-media" style="text-align: center;">
-      <h1>Puedes contactarme por: </h1>
+      <!--<h1>Puedes contactarme por: </h1>-->
       <!--<a target="_blank" href="https://www.facebook.com/profile.php?id=61556443884219&mibextid=ZbWKwL" style="color: #0821ff;"><i class='bx bxl-facebook' ></i></a>
       <a target="_blank" href="https://www.instagram.com/_fherxxo_/" style="color: #ff0062;"><i class='bx bxl-instagram'></i></a>
       <a  target="_blank"href="https://x.com/FHERXXXXO?t=zdsuiUWud4Nn0FmfmXvs1A&s=09" style="color: #00b7ff;"><i class='bx bxl-twitter'></i></a>-->
       <!--<a target="_blank" href="https://wa.me/+50372201248" style="color: #099405;"><i class='bx bxl-whatsapp'></i></a>-->
-      <a target="_blank" href="https://www.linkedin.com/in/fernando-gonz%C3%A1lez-05b297232/"><i class='bx bxl-linkedin'></i></a>
+      <!--<a target="_blank" href="https://www.linkedin.com/in/fernando-gonz%C3%A1lez-05b297232/"><i class='bx bxl-linkedin'></i></a>-->
       <!--<a target="_blank" href="mailto:ferandre1718.frg@gmail.com" style="color: #ff00008a;"><i class='bx bxl-gmail' ></i></a>-->
       <!--<a target="_blank" href="https://github.com/Fernando1809" style="color: #000000;"><i class='bx bxl-github'></i></a>-->
     </footer>
